--- a/examples/dinamic.html
+++ b/examples/dinamic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Create responsive YouTube players dynamics</title>
 </head>
 <body>
 
