--- a/examples/simple.html
+++ b/examples/simple.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Responsive YouTube players</title>
 </head>
 <body>
 
-<div data-ry-video="5ABos9UTfJU" data-ry-config="{&quot;autoplay&quot;:1}"></div>
+<div data-ry-video="5ABos9UTfJU" data-ry-autoplay="1"></div>
+
+<button onclick="ResponsiveYoutube.destroy();">Destroy</button>
 
 <script type="text/javascript" src="../responsive-youtube.js"></script>
 <script type="text/javascript">
