--- a/examples/dinamic.html
+++ b/examples/dinamic.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>Create responsive YouTube players dynamics</title>
 </head>
 <body>
