--- a/examples/simple.html
+++ b/examples/simple.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>Responsive YouTube players</title>
 </head>
 <body>
 
-<div data-ry-video="5ABos9UTfJU" data-ry-autoplay="1"></div>
+<div data-ry-video="5ABos9UTfJU" data-ry-autoplay="1" data-ry-start="100"></div>
 
 <button onclick="ResponsiveYoutube.destroy();">Destroy</button>
 
