--- a/examples/simple.html
+++ b/examples/simple.html
@@ -10,7 +10,7 @@
 
 <button onclick="ResponsiveYoutube.destroy();">Destroy</button>
 
-<script type="text/javascript" src="../responsive-youtube.js"></script>
+<script type="text/javascript" src="../responsive-youtube.min.js"></script>
 <script type="text/javascript">
 ResponsiveYoutube.start({
     "rel": 0 //Remove related videos
