--- a/examples/simple.html
+++ b/examples/simple.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>Responsive YouTube players</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 </head>
 <body>
 
-<div data-ry-video="5ABos9UTfJU" data-ry-autoplay="1" data-ry-start="100"></div>
-
 <button onclick="ResponsiveYoutube.destroy();">Destroy</button>
+<button onclick="ResponsiveYoutube.start({ rel: 0 });">Restore (without related videos)</button>
+<button onclick="ResponsiveYoutube.start();">Restore (with related videos)</button>
+
+<hr>
+
+<div data-ry-video="5ABos9UTfJU" data-ry-autoplay="1" data-ry-start="100"></div>
 
 <script type="text/javascript" src="../responsive-youtube.min.js"></script>
 <script type="text/javascript">
