--- a/README.html
+++ b/README.html
@@ -1095,7 +1095,7 @@ body .markdown-body
 </pre></div>
 
 <p>RequireJS:</p>
-<div class="codehilite"><pre><span class="nx">define</span><span class="p">([</span><span class="s1">&#39;folder/foo/bar/responsive-youtube&#39;</span><span class="p">],</span> <span class="kd">function</span> <span class="p">(</span><span class="nx">ResponsiveYoutube</span><span class="p">)</span> <span class="p">{</span>
+<div class="codehilite"><pre><span class="nx">requirejs</span><span class="p">([</span><span class="s1">&#39;folder/foo/bar/responsive-youtube&#39;</span><span class="p">],</span> <span class="kd">function</span> <span class="p">(</span><span class="nx">ResponsiveYoutube</span><span class="p">)</span> <span class="p">{</span>
     <span class="p">...</span>
 <span class="p">});</span>
 </pre></div>
