--- a/examples/simple.html
+++ b/examples/simple.html
@@ -15,7 +15,7 @@
 
 <div data-ry-video="5ABos9UTfJU" data-ry-autoplay="1" data-ry-start="100"></div>
 
-<script type="text/javascript" src="../responsive-youtube.min.js"></script>
+<script type="text/javascript" src="../responsive-youtube.js"></script>
 <script type="text/javascript">
 ResponsiveYoutube.start({
     "rel": 0 //Remove related videos
